--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 			<div class="container">
 				<h1>My Web Project</h1>
 				<p>Student Project - WEB ATELIER (UDIT)</p>
+				<a href="sow/index.html">Práctica: Informe de Análisis de Sitios Web Sobresalientes (SOW)
+</a>
 			</div>
 		</header>
 
