--- a/sow/index.html
+++ b/sow/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Some Outstanding Webs – Análisis de Sitios Premiados</title>
     <link rel="stylesheet" href="../assets/css/sow.css" />
-    <link rel="stylesheet" href="../assets/css/style.css" />
+    <link rel="stylesheet" href="../assets/css/index.css" />
   </head>
   <body>
+    <section class="cover">
+	    <h1 class="title">Some Outstanding Webs</h1>
+    </section>
     <header>
       <h1>Some Outstanding Webs</h1>
       <nav>
@@ -25,6 +28,7 @@
       <!-- Secciones individuales para cada sitio -->
       <section id="site-awwwards">
         <h2>Awwwards</h2>
+        
         <!-- Contenido de análisis del sitio Awwwards -->
       </section>
 
