--- a/sow/index.html
+++ b/sow/index.html
@@ -1,47 +1,78 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Some Outstanding Webs – Análisis de Sitios Premiados</title>
-    <link rel="stylesheet" href="../assets/css/sow.css" />
-    <link rel="stylesheet" href="../assets/css/index.css" />
-  </head>
-  <body>
-    <section class="cover">
-	    <h1 class="title">Some Outstanding Webs</h1>
-    </section>
-    <header>
-      <h1>Some Outstanding Webs</h1>
-      <nav>
-        <!-- Menú de navegación fijo -->
-        <ul>
-          <li><a href="#site-awwwards">Awwwards</a></li>
-          <li><a href="#site-webby">Webby</a></li>
-          <li><a href="#site-fwa">FWA</a></li>
-          <li><a href="#site-cssda">CSSDA</a></li>
-        </ul>
-      </nav>
-    </header>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Informe de Análisis de Sitios Web Sobresalientes</title>
+    <link rel="stylesheet" href="../assets/css/sow.css">
+    <link rel="stylesheet" href="../assets/css/index.css">
+</head>
+<body>
+    <!-- PORTADA -->
+  <div class="portada">
+    <div class="portada-container">
+      <div class="menu-wrapper">
+        <div class="menu" id="menu">
+          <span class="sow-text">SOW</span>
+          <div class="menu-items">
+            <a href="#">MILL3</a>
+            <a href="#">INCLUDI</a>
+            <a href="#">DAVID ALABA</a>
+            <a href="#">ANFM</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div> 
+        <h1 class="main-title">
+                INFORME DE ANÁLISIS DE<br>
+                SITIOS WEB SOBRESALIENTES
+        </h1>   
+        <p class="subtitle">POR: DIEGO FERNÁNDEZ RODRÍGUEZ</p>
+    </div>
+  </div>
 
-    <main>
-      <!-- Secciones individuales para cada sitio -->
-      <section id="site-awwwards">
-        <h2>Awwwards</h2>
+    <!-- CONTENIDO -->
+    <div class="content">
+        <h2 class="section-title">MILL3 - DIGITAL AGENCY: <a href="https://mill3studio.com/en" target="_blank">MILL3STUDIO/EN</a><br><br></h2>
         
-        <!-- Contenido de análisis del sitio Awwwards -->
-      </section>
+        <p class="description">
+            <strong>La agencia digital MILL3</strong> ofrece una web en la cual nada más entrar se encuentra como carta de presentación numerosos trabajos, en su mayoría diseños webs. Busca comunicar al instante cercanía y profesionalidad con el receptor como si fuese un futuro cliente, además su filosofía salta a la vista rápido: precisión técnica y calidez. A través de un scroll rápido por la homepage nos damos cuenta de que estamos tratando con una agencia que busca modernizar sus webs con los trends más actuales.
+        </p>
 
-      <section id="site-webby">
-        <h2>Webby Awards</h2>
-        <!-- Contenido de análisis del sitio Webby -->
-      </section>
+        <div class="media-grid">
+            <div class="media-container"></div>
+            <div class="media-container"></div>
+        </div>
 
-      <!-- Más secciones para FWA, CSS Design Awards, etc. -->
-    </main>
+        <div class="text-columns">
+            <div class="column">
+                <p>Al hablar de la <strong>estructura</strong> hay que reconocer el flujo dinámico y extrovertido que nos acompaña al scrollear. No cuenta con un menú sticky (cuenta con la opción de traducir el texto), lo cual limpia la pantalla mientras se profundiza en la web y deja una sensación de limpieza visual a una web ya cargada de imágenes y animaciones. La web busca una comunicación directa con clics escasos y simples, no te dirigirá a páginas accesorias o puentes, siempre encontrarás información directa.</p>
+                <br>
+                <p>Su <strong>diseño visual</strong> se caracteriza por utilizar tipografías e imágenes grandes y voluminosas sin dejar de lado su orden y estética. Las imágenes y los vídeos se mezclan entre sí junto con animaciones de scroll para mostrar su historia y su manera de trabajar. Las tipografías artísticas se unen a lo anterior para crear una preciosa simbiosis visual. La combinación ofrece la sensación de orden, sofisticación y modernidad que rige el día a día.</p>
+            </div>
+            <div class="column">
+                <p>En cuanto a <strong>interacción</strong> mantiene el equilibrio antes mencionado. Las animaciones acompañan al usuario en vez de guiarlo, lo que da sensación de libertad y cercanía. Los vídeos son sutiles por lo que hace hace el usuario tome un descanso visual para admirar. Los contenidos audiovisuales son los protagonistas totales de la web. El dinamismo es simple y efectivo, no se pide más para el portfolio de una agencia.</p>
+                <br>
+                <p>Desde el apartado de <strong>usabilidad y técnica</strong> observamos buenas prácticas a la hora de construir la web: carga rápida, jerarquía visual estructurada y diseño totalmente responsive. Se consigue así una experiencia cómoda, además de una perfecta optimización de los recursos empleados que hace no sufrir al ordenador. Su estructura hace que sea muy fácil actualizar en el tiempo con los trabajos que vaya haciendo la agencia.</p>
+            </div>
+        </div>
 
-    <footer>
-      <p>© 2025 Web Atelier (UDIT) – Informe de análisis.</p>
-    </footer>
-  </body>
+        <div class="single-column">
+            <div class="highlight-box">
+              <p><strong>La web de MILL3</strong> transmite exactamente lo que buscan decir: agencia seria y creativa, si tienes una web aburrida e insípida contactarlos para transformarla en modernidad y alegría. Esto lo ha conseguido con un diseño que no busca deslumbrar con miles de efectos si no con su trabajo, y su web es prueba de ello. Lo único que cambiaría sería la estructura de la web ya que parece más un portfolio profesional que la web de una agencia.</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- FOOTER -->
+    <div class="footer">
+        <div class="footer-title">Diego Fernández Rodríguez - Informe de Análisis de Sitios Web Sobresalientes</div>
+        <div class="footer-subtitle">Maquetación Web con Hojas de Estilo - UDIT 2025/26</div>
+    </div>
+
+    <script src="../assets/js/sow.js"></script>
+    <script src="../assets/js/main.js"></script>
+</body>
 </html>
